@startuml agario
skinparam style strictuml
skinparam DefaultFontName Arial
skinparam DefaultFontSize 16
skinparam DefaultFontStyle bold
skinparam ArrowThickness 2.2
skinparam ArrowColor #gray
hide empty members

class "GameServer" as GameServer {
  game : Game
}

class "GameClient" as GameClient {
  game : Game
}

class "Game" as Game {
  maps : Map
}

class "GameMap" as GameMap {
  group : SuperGroup
}
class "SuperGroup" as SuperGroup{
  playerGroup : PlayerGroup
  virusGroup: VirusGroup
  foodGroup: FoodGroup
  eatingPlayerVirus: function
  eatingPlayerFood: function
  eatingPlayerPlayer: function
  rigidPlayerPlayer: function
  combiningPlayerPlayer: function
  update()
  show()
  collide()
}
  ' ballVirusCollider : BallVirusCollider
  ' ballFoodCollider : BallFoodCollider

class "PlayerGroup" as PlayerGroup {
  playerMap : Map
  ' rigidColliderPlayerPlayer : RigidColliderPlayerPlayer
  ' combiningColliderPlayerPlayer: CombiningColliderPlayerPlayer
  update()
  show()
}
  ' eatingCollider : EatingCollider
  
' namespace EatingCollider {
'   handle()
' }

class "Player" as Player {
  ballGroup : BallGroup
}

class "BallGroup" as BallGroup {
  ballMap : Map
  ' eatingColliderBallBall : EatingColliderBallBall
}

  ' combiningCollider : CombiningCollider

' class CombiningCollider  combiningCollider : CombiningCollider


class "Ball" as Ball {
  radius : float
  position : position
  motion : Motion
  explode()
  eat()
  canEat()
}

class "VirusGroup" as VirusGroup {
  virusMap : Map
}

class "Virus" as Virus {
  radius : float
  position: Vector
}

class "FoodGroup" as FoodGroup {
  foodMap : Map
}

class "Food" as Food {
  radius : float
  position: Vector
}

' class "Circle" as Circle {
'   radius : float
'   position: Vector
' }

GameServer "1" *-- "1" Game
GameClient "1" *-- "1" Game

Game "1" *-- "*" GameMap

GameMap *--  SuperGroup

SuperGroup *--  PlayerGroup
SuperGroup *--  VirusGroup
SuperGroup *--  FoodGroup
' SuperGroup *-- BallVirusCollider
' SuperGroup *-- BallFoodCollider

PlayerGroup "1" *-- "*" Player
' PlayerGroup *-- EatingCollider

Player *-- BallGroup

BallGroup "1" *-- "*" Ball
' BallGroup *-- CombiningCollider

VirusGroup "1" *-- "*" Virus
FoodGroup "1" *-- "*" Food

' Circle <|-- Ball
' Circle <|-- Virus
' Circle <|-- Food

@enduml
